deleted actions and links on red area

--- a/map_without_sold.html
+++ b/map_without_sold.html
@@ -8,9 +8,6 @@
     <script type="text/javascript" src="js/map_without_sold.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/map.css" />
-    <script type="text/javascript" src="js/map_without_sold.js"></script>
-
-
 </head>
 
 <body>
@@ -118,180 +115,179 @@
         <area shape="poly" id="111" class="black_house" data-mapid="111"
               coords="1669,594,1567,586,1569,570,1571,560,1572,549,1573,542,1576,531,1578,522,1581,515,1586,505,1590,497,1593,491,1599,483,1604,477,1608,473,1612,469,1615,465,1620,462,1624,462,1631,462,1635,464,1639,469,1647,479,1653,490,1660,504,1665,517,1668,528,1671,541,1672,561,1670,580,1669,588,1671,571"
               href="#111" alt="111">
-        <area id="109" class="black_house" shape="poly" data-mapid="109" id="109"
+        <area class="black_house" shape="poly" data-mapid="109" id="109"
               coords="1669,594,1566,586,1565,591,1564,597,1564,602,1563,608,1561,614,1560,620,1558,628,1556,635,1553,643,1552,648,1675,679,1673,661,1669,650,1666,636,1666,622,1667,607"
               href="#109" alt="109">
-        <area id="107" class="black_house" shape="poly" data-mapid="107" id="107"
+        <area class="black_house" shape="poly" data-mapid="107" id="107"
               coords="1653,758,1532,697,1534,691,1538,684,1540,679,1543,671,1546,665,1549,657,1552,648,1674,678,1675,685,1675,694,1674,703,1674,711"
               href="#107" alt="107">
 
 
         <area shape="poly" id="33" class="red_house" data-mapid="33"
               coords="1102,1590,1158,1549,1168,1434,1092,1414,1050,1375,1046,1378,1040,1383,1034,1387,1060,1435"
-              href="#33" alt="33">
-        <area shape="poly" class="red_house" coords="1862,3083" href="#">
+                href="#" alt="33">
         <area shape="poly" class="red_house" id="91" data-mapid="91"
               coords="1101,1591,1053,1628,912,1432,920,1427,929,1423,938,1418,945,1416,955,1413,965,1410,974,1408,983,1405,993,1402,1002,1400,1011,1397,1020,1393,1027,1390,1034,1387,1061,1437"
-              href="#91" alt="91">
+              href="#" alt="91">
         <area shape="poly" class="red_house" id="90" data-mapid="90"
               coords="1052,1628,1032,1644,964,1583,817,1552,822,1536,828,1527,832,1520,837,1511,841,1505,845,1498,850,1490,855,1482,863,1473,869,1466,878,1457,886,1450,893,1444,900,1439,912,1432"
-              href="#90" alt="90">
+              href="#" alt="90">
         <area shape="poly" class="red_house" id="30" data-mapid="30"
               coords="1031,1645,948,1707,794,1589,799,1582,804,1575,808,1569,811,1563,813,1557,817,1552,964,1583"
-              href="#30" alt="30">
+              href="#" alt="30">
         <area shape="poly" class="red_house" id="29" data-mapid="29"
               coords="948,1708,873,1766,849,1771,769,1613,774,1608,781,1603,787,1598,791,1594,795,1590" href="#29"
               alt="29">
         <area shape="poly" class="red_house" id="28" data-mapid="28"
               coords="848,1771,753,1793,705,1631,711,1631,720,1630,727,1629,736,1628,744,1625,753,1621,760,1618,769,1613"
-              href="#28" alt="28">
+              href="#" alt="28">
         <area shape="poly" class="red_house" id="27" data-mapid="27" coords="752,1793,614,1825,684,1630,705,1632"
-              href="#27" alt="27">
+              href="#" alt="27">
         <area shape="poly" class="red_house" id="25" data-mapid="25"
               coords="614,1825,576,1834,453,1771,442,1734,448,1712,477,1712,490,1698,494,1687,624,1752,669,1626,684,1630"
-              href="#25" alt="25">
+              href="#" alt="25">
         <area shape="poly" class="red_house" id="26" data-mapid="26"
               coords="579,1562,552,1590,567,1616,564,1632,541,1632,545,1670,520,1670,496,1678,494,1686,624,1751,669,1626,654,1620,634,1607"
-              href="#26" alt="26">
+              href="#" alt="26">
         <area shape="poly" class="red_house" id="39" data-mapid="39"
               coords="756,1608,693,1465,647,1442,644,1462,619,1454,617,1470,591,1481,583,1500,596,1543,586,1554,617,1581,641,1599,663,1613,673,1617,699,1622,710,1622,727,1621,741,1615"
-              href="#39" alt="39">
+              href="#" alt="39">
         <area shape="poly" class="red_house" id="38" data-mapid="38"
               coords="757,1608,774,1597,785,1586,795,1573,801,1560,808,1546,818,1525,826,1513,830,1505,745,1395,714,1383,703,1390,709,1434,692,1439,692,1466"
-              href="#38" alt="38">
+              href="#" alt="38">
         <area shape="poly" class="red_house" id="37" data-mapid="37"
               coords="883,1440,795,1328,762,1319,743,1329,742,1346,760,1354,766,1383,744,1395,830,1504,844,1483,853,1467,863,1457"
-              href="#37" alt="37">
+              href="#" alt="37">
         <area shape="poly" class="red_house" id="35" data-mapid="35"
               coords="918,1418,936,1409,950,1404,963,1400,978,1396,991,1392,1005,1389,1017,1384,1026,1380,1035,1375,1043,1369,1052,1360,935,1241,921,1268,886,1263"
-              href="#35" alt="35">
+              href="#" alt="35">
         <area shape="poly" class="red_house" id="34" data-mapid="34"
               coords="936,1242,950,1210,1052,1174,1059,1205,1061,1221,1066,1233,1069,1244,1074,1256,1076,1267,1078,1279,1079,1293,1078,1307,1076,1319,1069,1335,1063,1346,1052,1360"
-              href="#34" alt="34">
+              href="#" alt="34">
         <area shape="poly" class="red_house" id="51" data-mapid="51"
               coords="1050,1153,973,1176,878,1125,877,1132,870,1136,845,1133,839,1143,856,1165,853,1188,835,1195,797,1197,796,1208,809,1216,815,1240,848,1240,854,1258,920,1268,950,1211,1052,1175"
-              href="#51" alt="51">
+              href="#" alt="51">
         <area shape="poly" class="red_house" id="50" data-mapid="50"
               coords="1049,1132,1052,1100,895,1048,913,1057,918,1065,922,1076,922,1082,911,1097,889,1086,869,1104,879,1119,878,1126,973,1176,1049,1154"
-              href="#50" alt="50">
+              href="#" alt="50">
         <area shape="poly" class="red_house" id="48" data-mapid="48"
               coords="1067,1046,1073,1030,1079,1020,1084,1010,1090,1001,1096,993,1100,985,1106,979,1114,969,966,877,949,883,937,899,949,929,967,942,964,966,951,970"
-              href="#48" alt="48">
+              href="#" alt="48">
         <area shape="poly" class="red_house" id="52" data-mapid="52"
               coords="1188,1152,1062,1105,1060,1117,1060,1127,1059,1141,1060,1152,1059,1165,1062,1176,1064,1187,1067,1199,1070,1211,1071,1222,1075,1234,1079,1245,1082,1255,1154,1216"
-              href="#52" alt="52">
+              href="#" alt="52">
         <area shape="poly" class="red_house" id="53" data-mapid="53"
               coords="1217,1099,1103,1000,1095,1010,1090,1017,1086,1028,1080,1038,1076,1048,1072,1059,1069,1070,1066,1079,1064,1088,1063,1105,1189,1151"
-              href="#53" alt="53">
+              href="#" alt="53">
         <area shape="poly" class="red_house" id="54" data-mapid="54"
-              coords="1103,1000,1119,979,1126,967,1135,959,1143,951,1160,932,1267,1008,1217,1099" href="#54" alt="54">
+              coords="1103,1000,1119,979,1126,967,1135,959,1143,951,1160,932,1267,1008,1217,1099" href="#" alt="54">
         <area shape="poly" class="red_house" id="55" data-mapid="55"
               coords="1160,932,1168,918,1172,909,1175,898,1178,887,1178,878,1178,869,1178,861,1180,853,1188,847,1197,846,1210,848,1228,847,1241,849,1254,851,1268,855,1282,859,1297,864,1303,867,1312,869,1300,946,1267,1007"
-              href="#55" alt="55">
+              href="#" alt="55">
         <area shape="poly" class="red_house" id="92" data-mapid="92"
               coords="1171,780,1169,821,1150,821,1122,820,1107,816,1093,812,1082,806,1070,798,1059,789,1047,780,1036,773,1030,769,1027,752,1025,714,1034,700,1035,692,1048,684,1175,757"
-              href="#92" alt="92">
+              href="#" alt="92">
         <area shape="poly" class="red_house" id="89" data-mapid="89"
               coords="442,1733,420,1666,433,1584,543,1531,557,1545,567,1553,578,1563,552,1590,567,1617,564,1632,541,1632,545,1670,520,1670,506,1675,497,1679,494,1688,491,1697,477,1711,448,1712"
-              href="#89" alt="89">
+              href="#" alt="89">
         <area shape="poly" class="red_house" id="88" data-mapid="88"
               coords="531,1467,528,1481,528,1493,528,1503,532,1511,536,1520,543,1531,433,1584,420,1667,398,1596,400,1480"
-              href="#88" alt="88">
+              href="#" alt="88">
         <area shape="poly" class="red_house" id="22" data-mapid="22"
               coords="401,1480,401,1439,412,1395,590,1368,588,1376,584,1385,580,1394,575,1404,569,1413,563,1421,556,1428,549,1436,543,1444,535,1453,533,1461,531,1468"
-              href="#22" alt="22">
+              href="#" alt="22">
         <area shape="poly" class="red_house" id="21" data-mapid="21"
               coords="412,1396,431,1325,590,1290,593,1296,594,1303,594,1310,596,1318,596,1325,595,1333,595,1342,594,1353,591,1361,590,1370"
-              href="#21" alt="21">
+              href="#" alt="21">
         <area shape="poly" class="red_house" id="20" data-mapid="20"
               coords="590,1291,430,1325,403,1319,447,1223,563,1243,580,1229,580,1243,583,1263,586,1279" href="#20"
               alt="20">
         <area shape="poly" class="red_house" id="19" data-mapid="19"
               coords="447,1223,480,1121,567,1177,597,1173,592,1182,588,1192,584,1201,582,1210,581,1217,580,1229,563,1243"
-              href="#19" alt="19">
+              href="#" alt="19">
         <area shape="poly" class="red_house" id="18" data-mapid="18"
               coords="479,1121,493,1072,577,1066,608,1120,643,1126,625,1139,612,1151,602,1162,597,1172,568,1177"
-              href="#18" alt="18">
+              href="#" alt="18">
         <area shape="poly" class="red_house" id="17" data-mapid="17"
               coords="576,1066,623,976,641,984,651,989,663,997,675,1006,689,1018,701,1028,713,1039,725,1047,734,1053,737,1057,737,1061,735,1067,726,1075,716,1084,705,1092,692,1100,679,1108,659,1118,643,1126,608,1121"
-              href="#17" alt="17">
+              href="#" alt="17">
         <area shape="poly" class="red_house" id="16" data-mapid="16"
               coords="502,911,494,1072,576,1066,623,977,591,963,573,955,529,927,517,918" href="#16" alt="16">
         <area shape="poly" class="red_house" id="15" data-mapid="15"
               coords="493,1072,340,943,353,934,365,928,376,924,385,922,395,920,405,916,416,914,424,911,433,909,441,907,452,905,459,903,467,903,475,903,483,905,492,907,502,911"
-              href="#15" alt="15">
+              href="#" alt="15">
         <area shape="poly" class="red_house" id="14" data-mapid="14"
               coords="478,1120,337,1097,329,1089,322,1075,315,1061,310,1047,306,1031,304,1015,305,1002,309,988,312,979,317,969,323,961,328,955,341,943,493,1072"
-              href="#14" alt="14">
+              href="#" alt="14">
         <area shape="poly" class="red_house" id="13" data-mapid="13"
               coords="376,1211,353,1148,329,1104,338,1098,480,1119,447,1222"
-              href="#13" alt="13">
+              href="#" alt="13">
         <area shape="poly" class="red_house" id="12" data-mapid="12"
-              coords="335,1117,336,1151,356,1207,313,1301,403,1318,447,1223,375,1210,355,1154" href="#12" alt="12">
+              coords="335,1117,336,1151,356,1207,313,1301,403,1318,447,1223,375,1210,355,1154" href="#" alt="12">
         <area shape="poly" class="red_house" id="11" data-mapid="11"
-              coords="209,1281,318,1107,327,1104,335,1115,337,1152,357,1207,314,1301" href="#11" alt="11">
+              coords="209,1281,318,1107,327,1104,335,1115,337,1152,357,1207,314,1301" href="#" alt="11">
         <area shape="poly" class="red_house" id="10" data-mapid="10"
               coords="309,1071,229,1147,206,1136,185,1131,172,1123,160,1116,150,1104,149,1334,209,1281,319,1106,318,1095,314,1082"
-              href="#10" alt="10">
+              href="#" alt="10">
         <area shape="poly" class="red_house" id="9" data-mapid="9"
               coords="294,1010,150,1012,149,1104,162,1117,172,1124,180,1129,189,1132,207,1137,216,1142,228,1147,251,1126,271,1106,290,1088,309,1071,298,1045,295,1025"
-              href="#9" alt="9">
+              href="#" alt="9">
         <area shape="poly" class="red_house" id="8" data-mapid="8"
               coords="150,1012,150,910,269,909,318,950,311,959,306,968,303,975,300,983,298,990,297,997,295,1010"
-              href="#8" alt="8">
+              href="#" alt="8">
         <area shape="poly" class="red_house" id="7" data-mapid="7"
               coords="333,936,283,894,282,718,150,717,150,909,269,909,318,950,325,942" href="#7" alt="7">
         <area shape="poly" class="red_house" id="6" data-mapid="6"
-              coords="282,718,393,717,398,911,388,913,377,915,367,916,359,920,349,924,341,928,334,936,284,894" href="#6"
+              coords="282,718,393,717,398,911,388,913,377,915,367,916,359,920,349,924,341,928,334,936,284,894" href="#"
               alt="6">
         <area shape="poly" class="red_house" id="5" data-mapid="5"
-              coords="394,718,494,717,479,894,467,894,456,894,446,896,437,897,428,900,420,904,410,906,398,911" href="#5"
+              coords="394,718,494,717,479,894,467,894,456,894,446,896,437,897,428,900,420,904,410,906,398,911" href="#"
               alt="5">
         <area shape="poly" class="red_house" id="4" data-mapid="4"
               coords="480,894,489,896,502,899,509,903,518,907,525,913,535,919,547,927,555,933,603,776,602,717,495,718"
-              href="#4" alt="4">
+              href="#" alt="4">
         <area shape="poly" class="red_house" id="3" data-mapid="3"
-              coords="603,776,691,777,661,905,628,967,609,960,598,957,588,951,578,948,569,943,555,933" href="#3"
+              coords="603,776,691,777,661,905,628,967,609,960,598,957,588,951,578,948,569,943,555,933" href="#"
               alt="3">
         <area shape="poly" class="red_house" id="1" data-mapid="1"
               coords="691,777,750,776,826,817,819,824,813,833,807,844,802,853,798,861,793,871,790,882,789,891,787,901,785,914,661,905"
-              href="#1" alt="1">
+              href="#" alt="1">
         <area shape="poly" class="red_house" id="2" data-mapid="2"
               coords="784,915,784,927,784,943,784,953,782,970,781,981,777,993,773,1007,769,1017,762,1029,756,1043,750,1048,743,1049,736,1044,713,1025,697,1012,685,1001,670,989,659,981,644,974,628,967,662,905"
-              href="#2" alt="2">
+              href="#" alt="2">
         <area shape="poly" class="red_house" id="40" data-mapid="40"
               coords="713,1383,688,1352,632,1331,605,1331,604,1349,602,1363,599,1371,596,1381,591,1392,587,1401,581,1412,572,1425,566,1432,556,1443,549,1451,542,1458,539,1471,537,1480,538,1492,538,1499,542,1510,548,1521,556,1531,568,1541,579,1550,587,1555,596,1543,583,1501,590,1481,617,1470,619,1455,644,1462,647,1443,692,1464,692,1439,710,1433,703,1392"
-              href="#40" alt="40">
+              href="#" alt="40">
         <area shape="poly" class="red_house" id="41" data-mapid="41"
               coords="811,1316,682,1244,597,1197,594,1207,591,1218,590,1227,590,1238,590,1251,592,1263,596,1274,600,1286,602,1297,604,1309,605,1331,631,1331,688,1353,714,1383,745,1394,765,1383,760,1354,742,1346,742,1330,762,1319,795,1328"
-              href="#41" alt="41">
+              href="#" alt="41">
         <area shape="poly" class="red_house" id="42" data-mapid="42"
               coords="812,1316,597,1196,604,1180,610,1170,617,1160,625,1151,635,1144,648,1135,663,1126,679,1117,696,1109,726,1172,796,1207,808,1215,815,1240,848,1240,854,1258,839,1272,815,1277,802,1287"
-              href="#42" alt="42">
+              href="#" alt="42">
         <area shape="poly" class="red_house" id="43" data-mapid="43"
               coords="696,1109,711,1101,721,1093,733,1084,742,1074,752,1063,759,1055,783,1076,845,1133,840,1144,856,1165,855,1173,855,1179,854,1187,846,1191,840,1194,829,1196,798,1197,797,1208,727,1173"
-              href="#43" alt="43">
+              href="#" alt="43">
         <area shape="poly" class="red_house" id="44" data-mapid="44"
               coords="759,1055,766,1043,774,1030,778,1020,783,1010,785,999,788,992,896,1033,895,1048,907,1052,915,1059,918,1064,921,1071,923,1078,922,1082,912,1095,890,1086,870,1103,871,1109,876,1115,879,1122,877,1131,871,1136,858,1134,845,1133"
-              href="#44" alt="44">
+              href="#" alt="44">
         <area shape="poly" class="red_house" id="45" data-mapid="45"
               coords="788,993,790,981,792,970,793,957,794,943,794,928,795,918,795,906,966,943,967,948,965,954,964,958,964,963,964,966,951,970,940,967,930,964,922,962,915,965,911,974,905,984,908,991,913,997,917,1002,919,1009,915,1019,904,1027,896,1033"
-              href="#45" alt="45">
+              href="#" alt="45">
         <area shape="poly" class="red_house" id="46" data-mapid="46"
               coords="796,905,798,894,799,883,802,876,805,869,809,859,812,852,817,846,822,837,829,830,836,822,842,814,850,808,859,802,871,795,882,789,895,784,912,779,923,777,941,775,958,775,973,776,985,778,996,782,1008,787,1016,790,1025,798,1017,807,1012,811,988,811,976,819,967,825,967,834,967,840,971,843,980,847,986,852,984,858,981,865,975,871,967,876,961,880,950,883,944,888,938,893,937,899,940,903,942,912,945,919,948,926,950,931,955,935,963,939,967,944"
-              href="#46" alt="46">
+              href="#" alt="46">
         <area shape="poly" class="red_house" id="83" data-mapid="83"
               coords="1723,911,1616,862,1611,872,1607,879,1603,888,1600,894,1596,902,1593,908,1591,917,1697,966"
-              href="#83" alt="83">
+              href="#" alt="83">
         <area shape="poly" class="red_house" id="81" data-mapid="81"
               coords="1697,967,1694,975,1691,982,1687,991,1681,1005,1676,1014,1656,1042,1576,978,1577,971,1579,964,1580,957,1582,949,1584,941,1586,933,1589,925,1591,917"
-              href="#81" alt="81">
+              href="#" alt="81">
         <area shape="poly" class="red_house" id="79" data-mapid="79"
               coords="1657,1042,1613,1106,1530,1040,1535,1037,1541,1032,1547,1029,1551,1024,1555,1019,1559,1013,1563,1007,1567,1000,1570,994,1574,986,1577,978"
-              href="#79" alt="79">
+              href="#" alt="79">
         <area shape="poly" class="red_house" id="87" data-mapid="87"
               coords="825,816,835,809,843,801,852,796,861,789,871,783,882,778,893,774,904,770,915,768,922,767,914,729,911,716,905,698,899,688,889,682,881,676,872,672,860,678,752,776"
-              href="#87" alt="87">
+              href="#" alt="87">
 
         <area shape="poly" coords="1639,812,1662,762,1775,798,1748,860" class="red_house" id="86" data-mapid="86"
               href="#86" alt="86">
