--- a/map.html
+++ b/map.html
@@ -14,10 +14,10 @@
 <div id="villageMap">
     <img src="main-map.jpg" alt="91" class="map" width="2200" height="3328" usemap="#Map"/>
     <map name="Map">
-        <area shape="rect" id="501" class="square_black" data-area="501" coords="145,557,178,586" href="#" alt="black square">
-        <area shape="rect" id="502" class="square_green" data-area="502" coords="145,449,177,478" href="#" alt="green square">
-        <area shape="rect" id="503" class="square_red" coords="145,397,177,427" href="#" alt="red square">
-        <area shape="rect" id="504" class="square_orange" data-area="504" coords="145,501,178,529" href="#" alt="orange square">
+        <area shape="rect" id="501" class="lot_key" data-group="black_lot" data-area="501" coords="145,557,178,586" href="#" alt="black square">
+        <area shape="rect" id="502" class="lot_key" data-group="green_lot" data-area="502" coords="145,449,177,478" href="#" alt="green square">
+        <area shape="rect" id="503" class="lot_key" data-group="red_lot" data-area="503" coords="145,397,177,427" href="#" alt="red square">
+        <area shape="rect" id="504" class="lot_key" data-group="orange_lot" data-area="504" coords="145,501,178,529" href="#" alt="orange square">
 
         <area shape="poly" data-area="300,setOfLots" class="setOfLots" id="300"
               coords="1451,851,1432,850,1419,850,1402,849,1382,849,1362,848,1346,848,1336,847,1326,845,1315,841,1330,753,1331,744,1374,652,1507,710,1491,736,1459,798"
@@ -37,10 +37,10 @@
         <area shape="poly" id="305" data-area="305,setOfLots" class="setOfLots"
               coords="1312,869,1301,946,1267,1007,1155,1215,1083,1254,1085,1263,1087,1274,1089,1282,1088,1291,1089,1302,1087,1310,1086,1317,1084,1322,1082,1332,1078,1339,1075,1344,1073,1349,1080,1353,1086,1356,1094,1358,1103,1358,1110,1358,1115,1357,1120,1356,1126,1355,1132,1352,1137,1350,1142,1347,1150,1342,1155,1338,1162,1333,1168,1327,1174,1320,1179,1316,1184,1315,1189,1314,1196,1313,1201,1308,1209,1303,1216,1300,1225,1300,1250,1300,1254,1301,1258,1303,1261,1306,1266,1310,1293,1336,1301,1332,1304,1334,1308,1329,1311,1321,1316,1258,1364,1169,1430,1146,1427,1019,1429,1009,1431,996,1433,983,1439,964,1442,950,1446,938,1448,926,1450,918,1451,891,1450,885,1447,881,1443,878,1438,875"
               href="#305" alt="North Cabins">
-        <area shape="poly" data-area="306" id="306,setOfLots" class="setOfLots"
+        <area shape="poly" data-area="306,setOfLots" id="306" class="setOfLots"
               coords="1576,491,1507,475,1459,463,1348,437,1354,401,1357,381,1360,372,1362,366,1366,361,1370,355,1375,351,1380,348,1384,346,1388,344,1393,343,1401,341,1410,342,1419,342,1428,344,1436,346,1442,347,1452,347,1458,349,1469,349,1477,351,1487,352,1499,353,1507,354,1518,357,1528,360,1536,363,1551,373,1563,383,1570,390,1574,396,1581,402,1589,412,1601,427,1607,432,1611,437,1626,447,1640,454,1636,457,1623,459,1614,464"
               href="#306" alt="Lodges at Fish Creek ||">
-        <area shape="poly" data-area="307" id="307,setOfLots" class="setOfLots"
+        <area shape="poly" data-area="307,setOfLots" id="307" class="setOfLots"
               coords="1669,401,1643,277,1556,249,1514,237,1382,200,1314,196,1312,203,1310,210,1308,218,1305,227,1302,235,1298,242,1293,249,1287,257,1370,343,1378,338,1384,336,1390,333,1399,332,1410,333,1427,334,1453,338,1477,341,1490,343,1507,345,1526,350,1546,358,1568,374,1579,385,1589,396,1601,409,1616,426,1621,431,1629,431,1638,427"
               href="#307" alt="Lodges at Fish Creek">
         <area shape="poly" data-area="99,green_lot" class="green_lot" id="99"
